# ServiceDeskAuthService

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
src/app/: main.py
src/app/actions/: create_user.py
src/app/auth/: backends.py  dependencies.py  manager.py  routers.py  strategies.py
src/app/core/: config.py
src/app/database/: base.py  session.py
src/app/migrations/: env.py
src/app/migrations/versions/: 3fa7e1e28827_add_user_model.py
src/app/models/: user.py
src/app/schemas/: user.py
